--- a/src/VaultIQ_backend/api/package.json
+++ b/src/VaultIQ_backend/api/package.json
@@ -2,6 +2,7 @@
   "name": "ai-verified-tokenized-vaults",
   "private": true,
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -9,12 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@prisma/client": "^6.10.1",
-    "cors": "^2.8.5",
-    "express": "^5.1.0",
     "lucide-react": "^0.344.0",
-    "multer": "^2.0.1",
-    "prisma": "^6.10.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.30.1"
