--- a/src/VaultIQ_backend/api/src/VaultIQ_backend/package.json
+++ b/src/VaultIQ_backend/api/src/VaultIQ_backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vaultiq-api",
+  "name": "vaultiq-backend",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -7,8 +7,8 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "multer": "^1.4.5",
     "cors": "^2.8.5",
-    "@prisma/client": "^5.0.0"  // or whatever version you're using
+    "multer": "^1.4.5-lts.1",
+    "@prisma/client": "^5.7.1"
   }
 }
